--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-name: Your New Jekyll Site
+name: jmoxon dot net
 markdown: redcarpet
 pygments: true
+safe: true
+exclude: [node_modules, src, bower.json, config.rb, gulpfile.js, package.json]
