--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "gulp-watch": "~0.5.0",
     "gulp-compass": "~1.1.2",
     "gulp-inject": "~0.3.1",
-    "gulp-rev": "~0.2.1"
+    "gulp-rev": "~0.2.1",
+    "connect": "~2.13.0",
+    "gulp-wait": "0.0.2",
+    "gulp-concat": "~2.1.7"
   }
 }
