--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-rev": "~0.2.1",
     "connect": "~2.13.0",
     "gulp-wait": "0.0.2",
-    "gulp-concat": "~2.1.7"
+    "gulp-concat": "~2.1.7",
+    "gulp-plumber": "~0.5.6"
   }
 }
