--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,26 @@
-name: jmoxon dot net
+name: Unpretentious web development articles
 markdown: redcarpet
 pygments: true
 safe: true
-exclude: ["node_modules", "src", "bower.json", "config.rb", "gulpfile.js", "package.json", ".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
+exclude: ["node_modules","public", "src", "bower.json", "config.rb", "gulpfile.js", "package.json", ".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 
 # This is the default format.
 # For more see: http://jekyllrb.com/docs/permalinks/
-permalink: /:categories/:year/:month/:day/:title
+# permalink: /:categories/:year/:month/:day/:title
+permalink: /:categories/:title
 
+# excerpt_separator: ""
 
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
-tagline: Site Tagline
+title : web development articles
+tagline: my 2 cents on everything web
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
+  name : John Moxon
+  email : jmoxon@gmail.com
+  github : johnmoxon
+  twitter : johnmoxon
   feedburner : feedname
 
 # The production_url is only used when full-domain names are needed
@@ -29,7 +31,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://username.github.io
+production_url : http://jmoxon.net
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
