--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : jekyllbootstrap
+      short_name : jmoxon
     livefyre :
       site_id : 123
     intensedebate :
@@ -121,7 +121,7 @@ JB :
   # Set 'provider' to false to turn sharing off globally.
   #
   sharing :
-    provider : false
+    provider : tweet
 
   # Settings for all other include helpers can be defined by creating
   # a hash with key named for the given helper. ex:
