--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Unpretentious web development articles
+name: jmoxon.net webdev articles
 markdown: redcarpet
 pygments: true
 safe: true
@@ -22,6 +22,7 @@ author :
   github : johnmoxon
   twitter : johnmoxon
   feedburner : feedname
+  googleplus : johnmoxon
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
