--- a/_config.yml
+++ b/_config.yml
@@ -105,9 +105,9 @@ JB :
   # Set 'provider' to false to turn analytics off globally.
   #
   analytics :
-    provider : google
+    provider : googletagmanager
     google :
-        tracking_id : 'UA-123-12'
+        tracking_id : 'GTM-NWRZFM'
     getclicky :
       site_id :
     mixpanel :
