--- a/_config.yml
+++ b/_config.yml
@@ -107,6 +107,8 @@ JB :
   analytics :
     provider : googletagmanager
     google :
+        tracking_id : 'UA-316326-5'
+    googletagmanager :
         tracking_id : 'GTM-NWRZFM'
     getclicky :
       site_id :
@@ -115,6 +117,10 @@ JB :
     piwik :
         baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
         idsite : '1'                   # the id of the site on Piwik
+
+  webmastertools:
+    verification_code : 'WF6HdnRC6yGC1qbfvGK4hBfGcCdhDbnlN_9n364Fq_o'
+
 
   # Settings for sharing helper.
   # Sharing is for things like tweet, plusone, like, reddit buttons etc.
