Fixed social sharing and bgclip

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ permalink: /:categories/:title
 #
 title :  articles on web development
 tagline: My 2 cents on everything web
+feed_description:  Web development industry news and articles
 author :
   name : John Moxon
   email : jmoxon@gmail.com
@@ -33,6 +34,9 @@ author :
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
 production_url : http://jmoxon.net
+
+webmastertools:
+  verification_code : 'WF6HdnRC6yGC1qbfvGK4hBfGcCdhDbnlN_9n364Fq_o'
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -118,8 +122,6 @@ JB :
         baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
         idsite : '1'                   # the id of the site on Piwik
 
-  webmastertools:
-    verification_code : 'WF6HdnRC6yGC1qbfvGK4hBfGcCdhDbnlN_9n364Fq_o'
 
 
   # Settings for sharing helper.
