--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "fontawesome": "~4.0.3",
     "pace": "~0.5.1",
     "modernizr": "~2.7.2",
-    "jquery-readingtime-forked": "git@github.com:johnmoxon/jquery-readingtime.git#~0.1.3"
+    "jquery-readingtime-forked": "git@github.com:johnmoxon/jquery-readingtime.git#~0.1.3",
+    "jquery.easing": "~1.3.0"
   }
 }
