--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "gulp-wait": "0.0.2",
     "gulp-concat": "~2.1.7",
     "gulp-plumber": "~0.5.6",
-    "event-stream": "~3.1.1"
+    "event-stream": "~3.1.1",
+    "gulp-notify-growl": "~1.0.1",
+    "growl": "~1.7.0"
   }
 }
