--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ author :
   twitter : johnmoxon
   feedburner : feedname
   googleplus : johnmoxon
+  linkedin : johnmoxon
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
