Added linked in profile links

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author :
   github : johnmoxon
   twitter : johnmoxon
   feedburner : feedname
-  googleplus : johnmoxon
+  googleplus : JohnMoxonAU
   linkedin : johnmoxon
 
 # The production_url is only used when full-domain names are needed
