--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "gulp-git": "~0.3.0",
     "gulp-livereload": "~1.1.1",
     "gulp-uglify": "~0.2.1",
-    "gulp-cdnizer": "~0.2.2",
     "gulp-jshint": "~1.4.0",
     "gulp-sass": "~0.7.0",
     "bower": "~1.2.8",
@@ -36,8 +35,6 @@
     "gulp-wait": "0.0.2",
     "gulp-concat": "~2.1.7",
     "gulp-plumber": "~0.5.6",
-    "event-stream": "~3.1.1",
-    "gulp-notify-growl": "~1.0.1",
-    "growl": "~1.7.0"
+    "event-stream": "~3.1.1"
   }
 }
