--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-wait": "0.0.2",
     "gulp-concat": "~2.1.7",
     "gulp-plumber": "~0.5.6",
-    "event-stream": "~3.1.1"
+    "event-stream": "~3.1.1",
+    "gulp-clean": "~0.3.0"
   }
 }
