articles and bug fixing

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ pygments: true
 safe: false
 exclude: ["node_modules","public", "src", "bower.json", "config.rb", "gulpfile.js",  ".sublime-workspace", ".sublime-project", "package.json", ".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 timezone: Australia/Brisbane
-gems: [jekyll-redirect-from, jekyll-mentions]
+gems: [jekyll-redirect-from, jekyll-mentions, jemoji]
 highlighter: pygments
 defaults :
     max_num_category_posts: 5
