--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "gulp-concat": "~2.1.7",
     "gulp-plumber": "~0.5.6",
     "event-stream": "~3.1.1",
-    "gulp-clean": "~0.3.0"
+    "gulp-clean": "~0.3.0",
+    "jshint-junit-reporter": "0.0.6",
+    "jshint-stylish": "~0.4.0",
+    "gulp": "~3.5.6",
+    "browser-sync": "~1.3.3"
   }
 }
