--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: jmoxon.net webdev articles
 markdown: redcarpet
 pygments: true
-safe: false
+safe: true
 exclude: ["node_modules","public", "src", "bower.json", "config.rb", "gulpfile.js",  ".sublime-workspace", ".sublime-project", "package.json", ".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 timezone: Australia/Brisbane
 gems: [jekyll-redirect-from, jekyll-mentions, jemoji]
