--- a/bower.json
+++ b/bower.json
@@ -11,10 +11,12 @@
   ],
   "devDependencies": {
     "fontawesome": "~4.0.3",
-    "pace": "~0.5.1",
     "modernizr": "~2.7.2",
     "jquery-readingtime-forked": "git@github.com:johnmoxon/jquery-readingtime.git#~0.1.3",
     "jquery.easing": "~1.3.0",
     "bootstrap-validator": "~0.3.0"
+  },
+  "--comment--": {
+    "pace": "~0.5.1"
   }
 }
