--- a/package.json
+++ b/package.json
@@ -6,40 +6,36 @@
   "repository": "johnmoxon/johnmoxon.github.io",
   "author": {
     "name": "John Moxon",
-    "email": "john@jmoxon.net",
+    "email": "jmoxon@gmail.com",
     "url": "https://github.com/johnmoxon"
   },
-  "dependencies": {
-    "gulp": "~3.5.2",
-    "stream-combiner": "~0.0.4",
-    "gulp-util": "~2.2.14",
-    "gulp-exec": "~1.0.4",
-    "gulp-rename": "~1.0.0",
-    "gulp-git": "~0.3.0",
-    "gulp-livereload": "~1.1.1",
-    "gulp-uglify": "~0.2.1",
-    "gulp-jshint": "~1.4.0",
-    "gulp-sass": "~0.7.0",
-    "bower": "~1.2.8",
-    "gulp-imagemin": "~0.1.5"
-  },
+  "dependencies": {},
   "engines": {
     "npm": "1.3.x"
   },
   "devDependencies": {
-    "gulp-watch": "~0.5.0",
-    "gulp-compass": "~1.1.2",
-    "gulp-inject": "~0.3.1",
-    "gulp-rev": "~0.2.1",
-    "connect": "~2.13.0",
+    "bower": "^1.3.12",
+    "browser-sync": "^1.7.0",
+    "connect": "^3.3.3",
+    "event-stream": "^3.1.7",
+    "gulp": "^3.8.10",
+    "gulp-clean": "^0.3.1",
+    "gulp-compass": "^2.0.2",
+    "gulp-concat": "^2.4.2",
+    "gulp-exec": "^2.1.1",
+    "gulp-imagemin": "^2.0.0",
+    "gulp-inject": "^1.0.2",
+    "gulp-jshint": "^1.9.0",
+    "gulp-plumber": "^0.6.6",
+    "gulp-rename": "^1.2.0",
+    "gulp-rev": "^2.0.1",
+    "gulp-sass": "^1.1.0",
+    "gulp-uglify": "^1.0.1",
+    "gulp-util": "^3.0.1",
     "gulp-wait": "0.0.2",
-    "gulp-concat": "~2.1.7",
-    "gulp-plumber": "~0.5.6",
-    "event-stream": "~3.1.1",
-    "gulp-clean": "~0.3.0",
+    "gulp-watch": "^2.0.0",
     "jshint-junit-reporter": "0.0.6",
-    "jshint-stylish": "~0.4.0",
-    "gulp": "~3.5.6",
-    "browser-sync": "~1.3.3"
+    "jshint-stylish": "^1.0.0",
+    "stream-combiner": "^0.2.1"
   }
 }
