--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "bower": "^1.3.12",
-    "browser-sync": "^1.7.0",
+    "browser-sync": "2.x",
     "connect": "^3.3.3",
     "event-stream": "^3.1.7",
     "gulp": "^3.8.10",
