Small fixes to styling

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,13 @@
 name: jmoxon.net webdev articles
 markdown: redcarpet
-highlighter: true
-safe: true
-exclude: ["node_modules","public", "src", "bower_components", "bower.json", "config.rb", "gulpfile.js",  ".sublime-workspace", ".sublime-project", "package.json", ".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
+highlighter: pygments
+safe: false
+exclude: ["node_modules","public", "src", "bower_components", "bower.json", 
+          "config.rb", "gulpfile.js",  ".sublime-workspace", ".sublime-project", 
+          "package.json", ".rvmrc", ".rbenv-version", "README.md", "Rakefile", 
+          "changelog.md"]
 timezone: Australia/Brisbane
 gems: [jekyll-redirect-from, jekyll-mentions, jemoji]
-highlighter: pygments
 defaults :
     max_num_category_posts: 5
 
