--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,11 @@ name: jmoxon.net webdev articles
 markdown: redcarpet
 highlighter: pygments
 safe: false
-exclude: ["node_modules","public", "src", "bower_components", "bower.json", 
-          "config.rb", "gulpfile.js",  ".sublime-workspace", ".sublime-project", 
-          "package.json", ".rvmrc", ".rbenv-version", "README.md", "Rakefile", 
-          "changelog.md"]
+exclude: ["node_modules","public", "src", "bower_components", "bower.json",
+          "config.rb", "gulpfile.js",  ".sublime-workspace", ".sublime-project",
+          "package.json", ".rvmrc", ".rbenv-version", "README.md", "Rakefile",
+          "changelog.md", "categories", "about"]
+include: ["tags"]
 timezone: Australia/Brisbane
 gems: [jekyll-redirect-from, jekyll-mentions, jemoji]
 defaults :
