--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "jmoxonblog",
   "dependencies": {
-    "jquery": "~2.0.x",
+    "jquery": "2.0.x",
     "bootstrap": "~3.1.1"
   },
   "ignore": [
@@ -10,12 +10,12 @@
     "bower_components"
   ],
   "devDependencies": {
-    "fontawesome": "~4.0.3",
-    "modernizr": "~2.7.2",
-    "jquery.easing": "~1.3.0",
-    "bootstrap-validator": "~0.3.0"
+    "fontawesome": "4.0.3",
+    "modernizr": "2.7.2",
+    "jquery.easing": "1.3.0",
+    "bootstrap-validator": "0.3.0"
   },
   "--comment--": {
-    "pace": "~0.5.1"
+    "pace": "0.5.1"
   }
 }
