--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {},
   "engines": {
-    "npm": "1.3.x"
+    "npm": "2.10.1",
+    "bower": "1.4.1"
   },
   "devDependencies": {
-    "bower": "^1.3.12",
     "browser-sync": "2.x",
     "connect": "^3.3.3",
     "event-stream": "^3.1.7",
