--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,6 @@ exclude: ["node_modules","public", "src", "bower_components", "bower.json",
           "config.rb", "gulpfile.js",  ".sublime-workspace", ".sublime-project",
           "package.json", ".rvmrc", ".rbenv-version", "README.md", "Rakefile",
           "changelog.md"]
-include: ["_pages"]
 timezone: Australia/Brisbane
 gems: [jekyll-redirect-from, jekyll-mentions, jemoji]
 defaults :
@@ -16,7 +15,6 @@ defaults :
 # For more see: http://jekyllrb.com/docs/permalinks/
 # permalink: /:categories/:year/:month/:day/:title
 permalink: /:categories/:title
-relative_permalinks: false
 
 # Will comment this back in when I have pagination sorted
 # paginate: 5
@@ -95,7 +93,7 @@ JB :
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
   #
-  archive_path: /archive.html
+  archive_path: /archive/
   categories_path : /categories/
   tags_path : /tags/
   atom_path : /atom.xml
