--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "fontawesome": "4.0.3",
     "modernizr": "2.7.2",
     "jquery.easing": "1.3.0",
-    "bootstrap-validator": "0.3.0"
+    "bootstrap-validator": "0.3.0",
+    "jquery-readingtime-forked": "git@github.com:johnmoxon/jquery-readingtime.git#~0.3.1"
   },
   "--comment--": {
     "pace": "0.5.1"
