added auto_w - auto-width-image class

--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ author :
   feedburner : feedname
   googleplus : JohnMoxonAU
   linkedin : johnmoxon
+copyright: "copyright John Moxon 2015. All rights reserved."
 
 
 # The production_url is only used when full-domain names are needed
