configured .vscode tasks

--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ plugins:
   - jekyll-redirect-from
   - jekyll-mentions
   - jemoji
-defaults :
-    max_num_category_posts: 5
+# defaults :
+    # max_num_category_posts: 5
 
 # This is the default format.
 # For more see: http://jekyllrb.com/docs/permalinks/
