contact page and refactor templates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
     "python.pythonPath": "/usr/local/Cellar/python/3.7.7/Frameworks/Python.framework/Versions/3.7/bin/python3.7"
+    ,
+    "editor.fontSize": 13.5,
+    "files.exclude": {
+      "_build": true
+    }
 }
