--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,10 @@
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.svg filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
+*.ai filter=lfs diff=lfs merge=lfs -text
+*.eps filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
 _build/assets/img/** filter=lfs diff=lfs merge=lfs -text
 src/assets/img/** filter=lfs diff=lfs merge=lfs -text
