--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "jslint": "^0.12.1",
+    "netlify": "^4.3.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
