--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ exclude:
   - README.md
   - Rakefile
   - changelog.md
-keep_files: []
+# keep_files: []
 encoding: 'utf-8'
 markdown_ext:   'markdown,mkdown,mkdn,mkd,md'
 
@@ -67,10 +67,10 @@ verbose: false
 # defaults :
 #   - max_num_category_posts: 5
 
-liquid:
-  error_mode        : warn
-  strict_filters    : false
-  strict_variables  : false
+# liquid:
+#   error_mode        : warn
+#   strict_filters    : false
+#   strict_variables  : false
 
 
 # ----- Markdown Processors ----- #
@@ -80,15 +80,15 @@ rdiscount:
 redcarpet:
   extensions        : []
 
-kramdown:
-  auto_ids          : true
-  entity_output     : as_char
-  toc_levels        : [1, 2, 3, 4, 5, 6]
-  smart_quotes      : lsquo,rsquo,ldquo,rdquo
-  input             : GFM
-  hard_wrap         : false
-  footnote_nr       : 1
-  show_warnings     : false
+# kramdown:
+#   auto_ids          : true
+#   entity_output     : as_char
+#   toc_levels        : [1, 2, 3, 4, 5, 6]
+#   smart_quotes      : lsquo,rsquo,ldquo,rdquo
+#   input             : GFM
+#   hard_wrap         : false
+#   footnote_nr       : 1
+#   show_warnings     : false
 
   
 # ---- Default site settings ----- #
