--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,32 @@ destination: _site/
 # includes_dir:   '_includes'
 
 
-  
+
+# ---- Default site settings ----- #
+name: jmoxon.net
+title :  "Thoughts and ideas"
+tagline: "My 2 cents on everything online"
+feed_description:  "Web development industry news and articles"
+fail_back_keywords: "Web development, DevOps, workflow, productivity, automation"
+author :
+  name : John Moxon
+  email : jmoxon@gmail.com
+  github : http://github.com/johnmoxon/
+  twitter : https://twitter.com/johnmoxon
+  linkedin : https://www.linkedin.com/in/johnmoxon/
+  medium : https://medium.com/@johnmoxon
+  meeting_url: 'https://meetings.hubspot.com/jmoxon'
+copyright: "copyright John Moxon 2020. All rights reserved."
+license: "copyright John Moxon 2020. All rights reserved."
+analytics:
+  gtm:
+    tracking_id: GTM-WGHRT3
+  hubspot :
+    tracking_id : '7805952'
+
+
+
+  # site.analytics.gtm.tracking_id
 
 # ---- Handle reading ----- #
 safe: false
@@ -90,23 +115,6 @@ redcarpet:
 #   footnote_nr       : 1
 #   show_warnings     : false
 
-  
-# ---- Default site settings ----- #
-name: jmoxon.net
-title :  "Thoughts and ideas"
-tagline: "My 2 cents on everything online"
-feed_description:  "Web development industry news and articles"
-fail_back_keywords: "Web development, DevOps, workflow, productivity, automation"
-author :
-  name : John Moxon
-  email : jmoxon@gmail.com
-  github : http://github.com/johnmoxon/
-  twitter : https://twitter.com/johnmoxon
-  linkedin : https://www.linkedin.com/in/johnmoxon/
-  medium : https://medium.com/@johnmoxon
-  meeting_url: 'https://meetings.hubspot.com/jmoxon'
-copyright: "copyright John Moxon 2020. All rights reserved."
-license: "copyright John Moxon 2020. All rights reserved."
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
@@ -203,13 +211,9 @@ JB :
   # Set 'provider' to false to turn analytics off globally.
   #
   analytics :
-    provider : [googletagmanager, hubspot]
+    provider :
     google :
         tracking_id : 'UA-316326-5'
-    googletagmanager :
-        tracking_id : 'GTM-NWRZFM'
-    hubspot :
-        tracking_id : '7805952'
     getclicky :
       site_id :
     mixpanel :
