--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,7 @@ redcarpet:
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://jmoxon.net
+production_url : https://www.jmoxon.net
 
 webmastertools:
   verification_code : 'WF6HdnRC6yGC1qbfvGK4hBfGcCdhDbnlN_9n364Fq_o'
