--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ markdown_ext:   'markdown,mkdown,mkdn,mkd,md'
 
 # ----- Plugins ----- #
 plugins:
-  - jekyll-redirect-from
+  # - jekyll-redirect-from
   - jekyll-mentions
   - jemoji
 # whitelist:      []
