jekyll config and cleanup JB

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     ,
     "editor.fontSize": 13.5,
     "files.exclude": {
-      "_build": true,
-      "_site": true
+      // "_build": true,
+      // "_site": true
     }
 }
