resume template inheritance setup

--- a/src/jekyll/_data/resume.yml
+++ b/src/jekyll/_data/resume.yml
@@ -7,10 +7,12 @@ resume_versions:
         name: John Moxon
         phone: 0413 896 171
         email: info@jmoxon.net
+
       - section_name: Social
         linkedin: https://www.linkedin.com/in/johnmoxon/
         medium: https://medium.com/@johnmoxon
         twitter: https://twitter.com/johnmoxon
+
       - section_name: skills
         hard:
           - skill 1
@@ -20,60 +22,78 @@ resume_versions:
             - skill 1 
             - skill 2
             - skill 3
+
       - section_name: Experience
         experiences: 
           - company: Travel Money Group
             website: https://www.travelmoneyoz.com
-          - 
+            positions:
+              - title: Chief Technical Lead
+                date_start: 2017-01-12
+                summary: >-
+                  this is a summary
+                achievements:
+                  - achievement 1
+                  - achievement 2
+                  - achievement 3
+              - title: Digital Customer Experience Officer
+                date_start: 2015-01-12
+                date_end: 2017-01-11
+                summary: >-
+                  this is a summary
+                achievements:
+                  - achievement 1
+                  - achievement 2
+                  - achievement 3
+          - company: Flight Centre Travel Group
+            website: https://www.flightcentre.com.au
+            postions:
+              - title: Chief Technical Lead
+                date_start: 2017-01-12
+                summary: >-
+                  this is a summary
+                achievements:
+                  - achievement 1
+                  - achievement 2
+                  - achievement 3
+              - title: Digital Customer Experience Officer
+                date_start: 2015-01-12
+                date_end: 2017-01-11
+                summary: >-
+                  this is a summary
+                achievements:
+                  - achievement 1
+                  - achievement 2
+                  - achievement 3
+
+      - section_name: education
+        qualifications:
+          - name: Digital Media & Internet Culture
+            level: Degree
+            institution: University of Leeds (Trinity and All Saints)
+            website: https://www.leedstrinity.ac.uk/
+            date_start: 2000
+            date:end: 2003
+            grade: "2:1"
+
+      - section_name: awards
+        awards:
+          - name: Award name 1
+            description: >-
+              description here
+            award_body: awarding body name
+            website: https://www.leedstrinity.ac.uk/
+            date: 2000
+          - name: Award name 2
+            description: >-
+              description here 2
+            award_body: awarding body name
+            website: https://www.leedstrinity.ac.uk/
+            date: 2000
+              
+          
           
 
-experiences:
-      positions:
-        - title: Chief Technical Lead
-          date_start: 2017-01-12
-          summary: >-
-            this is a summary
-          achievements:
-            - achievement 1
-            - achievement 2
-            - achievement 3
-        - title: Digital Customer Experience Officer
-          date_start: 2015-01-12
-          date_end: 2017-01-11
-          summary: >-
-            this is a summary
-          achievements:
-            - achievement 1
-            - achievement 2
-            - achievement 3
-    - company: Flight Centre Travel Group
-      website: https://www.flightcentre.com.au
-      postions:
-        - title: Chief Technical Lead
-          date_start: 2017-01-12
-          summary: >-
-            this is a summary
-          achievements:
-            - achievement 1
-            - achievement 2
-            - achievement 3
-        - title: Digital Customer Experience Officer
-          date_start: 2015-01-12
-          date_end: 2017-01-11
-          summary: >-
-            this is a summary
-          achievements:
-            - achievement 1
-            - achievement 2
-            - achievement 3
-education:
-    - institution: University of Leeds (Trinity and All Saints)
-      website: https://www.leedstrinity.ac.uk/
-      date_start: 2000
-      date:end: 2003
-      qualification: Digital Media & Internet Culture
-      level: Degree
-      grade: "2:1"
           
 
 
