--- a/netlify.toml
+++ b/netlify.toml
@@ -76,22 +76,22 @@
 #    Basic-Auth = "someuser:somepassword anotheruser:anotherpassword"
 
 
-[[plugins]]
-  package = "netlify-plugin-submit-sitemap"
-
-	[plugins.inputs]
-
-	# The base url of your site (optional, default = main URL set in Netlify)
-	baseUrl = "https://www.jmoxon.net"
-
-	# Path to the sitemap URL (optional, default = /sitemap.xml)
-	sitemapPath = "/sitemap.xml"
-
-	# Enabled providers to submit sitemap to (optional, default = 'google', 'bing'). Possible providers are currently only 'google' and 'bing'.
-	providers = [
-		"google",
-		"bing"
-	]
+#[[plugins]]
+#  package = "netlify-plugin-submit-sitemap"
+#
+#	[plugins.inputs]
+#
+#	# The base url of your site (optional, default = main URL set in Netlify)
+#	baseUrl = "https://www.jmoxon.net"
+#
+#	# Path to the sitemap URL (optional, default = /sitemap.xml)
+#	sitemapPath = "/sitemap.xml"
+#
+#	# Enabled providers to submit sitemap to (optional, default = 'google', 'bing'). Possible providers are currently only 'google' and 'bing'.
+#	providers = [
+#		"google",
+#		"bing"
+#	]
 
 #[[plugins]]
 #package = "netlify-build-plugin-pushover"
