--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: github
   repo: johnmoxon/johnmoxon.github.io
-  branch: master
+  branch: stage 
   site_domain: www.jmoxon.net
 
 media_folder: "assets/uploads"
