--- a/admin/config.yml
+++ b/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: github
   repo: johnmoxon/johnmoxon.github.io
   branch: stage 
-  site_domain: www.jmoxon.net
+  site_domain: stage.jmoxon.net
 
 media_folder: "assets/uploads"
 
