updated configs and drafts

--- a/_data/comments/killer-products-they-didnt-know-they-wanted/entry1610764850979.yml
+++ b/_data/comments/killer-products-they-didnt-know-they-wanted/entry1610764850979.yml
@@ -1,7 +1,9 @@
 _id: 3ef579a0-57a4-11eb-a51b-2be7ccdfa8f8
 _parent: >-
   https://stage.jmoxon.net/data/2020/11/04/killer-products-they-didnt-know-they-wanted.html
+replying_to_uid: ''
 name: john
 email: jmoxon@gmail.com
 message: this a message
+hp: ''
 date: 1610764850
