--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "files.exclude": {
       "_build": true,
       "_site": true
-    }
+    },
+    "compile-hero.disable-compile-files-on-did-save-code": true
 }
